STM32CubeIDE/workspace_1.18.1/.metadata/.plugins/org.eclipse.cdt.ui/Test_USB.build.log
19:13:02 **** Incremental Build of configuration Debug for project Test_USB ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F302x8 -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:186:3: warning: implicit declaration of function 'HAL_UART_Transmit'; did you mean 'HAL_PCD_EP_Transmit'? [-Wimplicit-function-declaration]
  186 |   HAL_UART_Transmit(&huart2,(uint8_t *)ptr,len,10);
      |   ^~~~~~~~~~~~~~~~~
      |   HAL_PCD_EP_Transmit
../Core/Src/main.c:186:22: error: 'huart2' undeclared (first use in this function)
  186 |   HAL_UART_Transmit(&huart2,(uint8_t *)ptr,len,10);
      |                      ^~~~~~
../Core/Src/main.c:186:22: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

19:13:03 Build Failed. 2 errors, 1 warnings. (took 366ms)

